5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1863_2180.log
== TEST (2019-07-02 11:03:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
for i in range(n):
	for j in range(n):
		if (j-n-1) == i:
			m[i,j] == 0
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
for i in range(n):
	for j in range(n):
		if (j-n-1) == i:
			m[i,j] == 0
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
for i in range(n):
	for j in range(n):
		if (j-n-1) == i:
			m[i,j] == 0
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
for i in range(n):
	for j in range(n):
		if (j-n-1) == i:
			m[i,j] == 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
for i in range(n):
	for j in range(n):
		if (j-n-1) == i:
			m[i,j] = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
for i in range(n):
	for j in range(n):
		if (i+(n-1)) == (j):
			m[i,j] = 0
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:14:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
i = n - 1 
for j in range(n):
	m[i,j] = 0
	i = i - 1
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:16:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
i = n - 1 
for j in range(n):
	m[i,j] = -1000
	i = i - 1
print(max(m))

-- EXECUTION TIME:
1.15068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2180/main.py", line 9, in <module>
    print(max(m))
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:16:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
i = n - 1 
for j in range(n):
	m[i,j] = -1000
	i = i - 1
print(max(m))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v = zeros(n)
vm = zeros(n-1)
x = -1
for i in range(n)
	for j in range(n):
		v[j] = m[i,j]
		if v[x] != max(v):
			vm[i] = max(v)
print(vm)
-- ERROR:
File "XXXX", line 8
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v = zeros(n)
vm = zeros(n-1)
x = -1
for i in range(n):
	for j in range(n):
		v[j] = m[i,j]
		if v[x] != max(v):
			vm[i] = max(v)
print(vm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:25:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v = zeros(n)
vm = zeros(n-1)
x = -1
for i in range(n):
	for j in range(n):
		v[j] = m[i,j]
		if v[x] != max(v):
			vm[i] = max(v)
print(vm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:47:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(j)
print(vm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:48:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)
print(vm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:48:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)
print(vm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)
print(vm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:51:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)
print(vm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)
print(vm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:52:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n-1):
		if j!=a:
			v[j] = m[i,j]
		else:
			a = a - 1
	vm[i] = max(v)
print(vm)

-- EXECUTION TIME:
0.993039
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
32.0
---- user output:
[10. 20. 40.]
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
[0.48 0.54 0.89]
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
[89.7 89.7 98.9 91.3 66.5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:54:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n):
		if j < n - 1
			if j!=a:
				v[j] = m[i,j]
			else:
				a = a - 1
	vm[i] = max(v)
print(vm)

-- ERROR:
File "XXXX", line 10
    if j < n - 1
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:54:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz: ")))
n = shape(m)[0]
v= zeros(n-1)
vm = zeros(n)
a = n - 1
for i in range(n):
	for j in range(n):
		if j < n - 1:
			if j!=a:
				v[j] = m[i,j]
			else:
				a = a - 1
	vm[i] = max(v)
print(vm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
